--- a/app/src/main/res/layout/fragment_nota_fiscal.xml
+++ b/app/src/main/res/layout/fragment_nota_fiscal.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NotaFiscalFragment">
+    tools:context=".NotaFiscalFragment"
+    android:id="@+id/frameLayout">
 
-    <Button
-        android:id="@+id/notafiscal_pagina_btn"
+    <TextView
+        android:id="@+id/notafiscal_btn_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/notafiscal_button_text"/>
+        android:fontFamily="@font/jost"
+        android:text="@string/notafiscal_button_text"
+        android:textSize="40sp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="82dp" />
+
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/camera_photo" />
-        />
-</FrameLayout>
+        android:id="@+id/notafiscal_camera_btn"
+        android:layout_width="167dp"
+        android:layout_height="161dp"
+        android:src="@drawable/photo_camera_24dp_e8eaed_fill0_wght400_grad0_opsz24"
+        tools:layout_conversion_absoluteHeight="24dp"
+        tools:layout_conversion_absoluteWidth="24dp"
+        tools:layout_editor_absoluteX="122dp"
+        tools:layout_editor_absoluteY="228dp" /><![CDATA[
+
+    />
+]]>
+</androidx.constraintlayout.widget.ConstraintLayout>
