--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -86,4 +86,12 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="268dp" />
 
+    <Button
+        android:id="@+id/EntrarBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/entrar_button_text"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="534dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
