--- a/app/src/main/res/layout/fragment_nota_fiscal.xml
+++ b/app/src/main/res/layout/fragment_nota_fiscal.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".NotaFiscalFragment"
     android:id="@+id/frameLayout">
 
@@ -11,21 +12,27 @@
         android:id="@+id/notafiscal_btn_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/jost"
         android:text="@string/notafiscal_button_text"
         android:textSize="40sp"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="58dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.174"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/notafiscal_camera_btn"
         android:layout_width="167dp"
         android:layout_height="161dp"
+        android:layout_marginTop="208dp"
         android:src="@drawable/photo_camera_24dp_666666_fill0_wght400_grad0_opsz24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.536"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_conversion_absoluteHeight="24dp"
-        tools:layout_conversion_absoluteWidth="24dp"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="228dp" />
+        tools:layout_conversion_absoluteWidth="24dp" />
 
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
