--- a/app/src/main/res/layout/fragment_dentista.xml
+++ b/app/src/main/res/layout/fragment_dentista.xml
@@ -11,70 +11,65 @@
         android:id="@+id/dentista_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:fontFamily="@font/jost"
         android:text="@string/dentista_text"
         android:textSize="40sp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="49dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/notafiscal_btn"
         android:layout_width="298dp"
         android:layout_height="45dp"
+        android:layout_marginTop="156dp"
         android:text="@string/notafiscal_button_text"
-        tools:layout_conversion_absoluteHeight="48dp"
-        tools:layout_conversion_absoluteWidth="119dp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="413dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintHorizontal_bias="0.362"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <Button
-        android:id="@+id/cliente_btn"
-        android:layout_width="295dp"
-        android:layout_height="45dp"
-        android:text="@string/cliente_button_text"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_conversion_absoluteHeight="48dp"
-        tools:layout_conversion_absoluteWidth="93dp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="323dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        tools:layout_conversion_absoluteWidth="119dp" />
 
     <Button
         android:id="@+id/agenda_btn"
         android:layout_width="296dp"
         android:layout_height="49dp"
+        android:layout_marginTop="252dp"
         android:text="@string/agenda_button_text"
-        tools:layout_conversion_absoluteHeight="48dp"
-        tools:layout_conversion_absoluteWidth="98dp"
-        tools:layout_editor_absoluteX="37dp"
-        tools:layout_editor_absoluteY="241dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintHorizontal_bias="0.347"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="98dp" />
 
     <Button
         android:id="@+id/suporte_btn"
         android:layout_width="299dp"
         android:layout_height="48dp"
+        android:layout_marginTop="476dp"
         android:text="@string/suporte_button_text"
-        tools:layout_conversion_absoluteHeight="48dp"
-        tools:layout_conversion_absoluteWidth="99dp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="166dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintHorizontal_bias="0.357"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="99dp" />
+
+    <Button
+        android:id="@+id/cliente_btn"
+        android:layout_width="295dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="364dp"
+        android:text="@string/cliente_button_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="93dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
