--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -24,7 +24,7 @@
         android:id="@+id/nome"
         android:layout_width="341dp"
         android:layout_height="41dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="208dp"
         android:background="@drawable/rounded_conner"
         android:fontFamily="@font/jost"
         android:hint="@string/nome_text"
@@ -40,7 +40,7 @@
         android:id="@+id/cpf"
         android:layout_width="341dp"
         android:layout_height="41dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="280dp"
         android:background="@drawable/rounded_conner"
         android:fontFamily="@font/jost"
         android:hint="@string/cpf_text"
@@ -56,7 +56,7 @@
         android:id="@+id/endereco"
         android:layout_width="341dp"
         android:layout_height="41dp"
-        android:layout_marginTop="460dp"
+        android:layout_marginTop="480dp"
         android:background="@drawable/rounded_conner"
         android:fontFamily="@font/jost"
         android:hint="@string/endereco_text"
@@ -72,7 +72,7 @@
         android:id="@+id/numero"
         android:layout_width="341dp"
         android:layout_height="41dp"
-        android:layout_marginTop="384dp"
+        android:layout_marginTop="412dp"
         android:background="@drawable/rounded_conner"
         android:fontFamily="@font/jost"
         android:hint="@string/numero_text"
@@ -88,7 +88,7 @@
         android:id="@+id/funcao"
         android:layout_width="341dp"
         android:layout_height="41dp"
-        android:layout_marginTop="304dp"
+        android:layout_marginTop="344dp"
         android:background="@drawable/rounded_conner"
         android:fontFamily="@font/jost"
         android:hint="@string/funcao_text"
@@ -104,10 +104,26 @@
         android:id="@+id/email"
         android:layout_width="341dp"
         android:layout_height="41dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="148dp"
         android:background="@drawable/rounded_conner"
         android:fontFamily="@font/jost"
         android:hint="@string/email_button_text"
+        android:inputType="text"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_conversion_absoluteHeight="41dp"
+        tools:layout_conversion_absoluteWidth="341dp" />
+
+    <EditText
+        android:id="@+id/senha"
+        android:layout_width="341dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="548dp"
+        android:background="@drawable/rounded_conner"
+        android:fontFamily="@font/jost"
+        android:hint="@string/senha_text"
         android:inputType="text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +136,7 @@
         android:id="@+id/EntrarBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="592dp"
+        android:layout_marginTop="620dp"
         android:text="@string/entrar_button_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
