--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/nome"
+        android:id="@+id/nomeEditText"
         android:layout_width="341dp"
         android:layout_height="41dp"
         android:layout_marginTop="208dp"
@@ -37,7 +37,7 @@
         tools:layout_conversion_absoluteWidth="341dp" />
 
     <EditText
-        android:id="@+id/cpf"
+        android:id="@+id/cpfEditText"
         android:layout_width="341dp"
         android:layout_height="41dp"
         android:layout_marginTop="280dp"
@@ -53,7 +53,7 @@
         tools:layout_conversion_absoluteWidth="341dp" />
 
     <EditText
-        android:id="@+id/endereco"
+        android:id="@+id/enderecoEditText"
         android:layout_width="341dp"
         android:layout_height="41dp"
         android:layout_marginTop="480dp"
@@ -69,7 +69,7 @@
         tools:layout_conversion_absoluteWidth="341dp" />
 
     <EditText
-        android:id="@+id/numero"
+        android:id="@+id/numeroEditText"
         android:layout_width="341dp"
         android:layout_height="41dp"
         android:layout_marginTop="412dp"
@@ -85,7 +85,7 @@
         tools:layout_conversion_absoluteWidth="341dp" />
 
     <EditText
-        android:id="@+id/funcao"
+        android:id="@+id/funcaoEditText"
         android:layout_width="341dp"
         android:layout_height="41dp"
         android:layout_marginTop="344dp"
@@ -101,7 +101,7 @@
         tools:layout_conversion_absoluteWidth="341dp" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/emailEditText"
         android:layout_width="341dp"
         android:layout_height="41dp"
         android:layout_marginTop="148dp"
@@ -117,7 +117,7 @@
         tools:layout_conversion_absoluteWidth="341dp" />
 
     <EditText
-        android:id="@+id/senha"
+        android:id="@+id/senhaEditText"
         android:layout_width="341dp"
         android:layout_height="41dp"
         android:layout_marginTop="548dp"
